[tool.poetry]
name = "spectrum"
version = "0.1.0"
description = "A database of shared resources"
authors = ["Neil Munro (NMunro)"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-money = "^3.2.0"
pillow = "^10.3.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
whitenoise = "^6.5.0"
python-decouple = "^3.8"
dj-database-url = "^2.0.0"
gunicorn = "^22.0.0"
django-phone-field = "^1.8.1"
psycopg = { version = ">=3.1", extras = ["binary"] }
cron-validator = "^1.0.8"
cron-converter = "^1.0.2"
poetry-plugin-export = "^1.7.0"
django-taggit = "^6.0.0"
django-sendgrid-v5 = "^1.2.3"
python-dateutil = "^2.9.0.post0"


[tool.poetry.dev-dependencies]
coverage = "^7.4"
isort = "^5.10"
black = "^24.3"
sphinx = "^7.4"
factory-boy = "^3.3.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"
django-stubs-ext = "^5.0.4"
python-lsp-server = "^1.11.0"
pylsp-mypy = "^0.6.8"
python-lsp-isort = "^0.1"
python-lsp-black = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
